log
Thu, Mar 20, 2025 10:06:34 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025 10:36:20 PM: 
 exercises.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:45:10: error: unused variable 'L' [-Werror=unused-variable]
    List* L = create_list();
          ^
exercises.c: At top level:
exercises.c:47:4: error: expected identifier or '(' before 'return'
    return L;
    ^~~~~~
exercises.c:48:1: error: expected identifier or '(' before '}' token
 }
 ^
exercises.c: In function 'sumaLista':
exercises.c:62:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       sumaLista += actual;
                 ^~
exercises.c: In function 'eliminaElementos':
exercises.c:84:17: error: comparison between pointer and integer [-Werror]
       if(actual == elem){
                 ^~
exercises.c: In function 'crea_lista':
exercises.c:46:4: error: control reaches end of non-void function [-Werror=return-type]
    }
    ^
cc1.exe: all warnings being treated as errors
Compilation failed
c857e2b
Thu, Mar 20, 2025 10:39:11 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
ec34813
Thu, Mar 20, 2025 10:43:07 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
15f4e1b
Thu, Mar 20, 2025 10:47:57 PM: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
3782ba9
Thu, Mar 20, 2025 10:52:44 PM: 
 exercises.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  3|2
total_score: 40/70
c8037a4
